--- a/app/src/main/res/layout/activity_vault.xml
+++ b/app/src/main/res/layout/activity_vault.xml
@@ -1,29 +1,68 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="com.example.user.foolr.Vault">
+<?xml version="1.0" encoding="utf-8"?>
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:orientation="vertical"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent">
 
-    <TextView
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:orientation="vertical"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="Foolr Vault"
-        android:id="@+id/textView2"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        android:layout_gravity="center_horizontal"
+        android:weightSum="1">
+        <Button
+            android:id="@+id/button"
+            android:layout_width="50dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="right"
+            android:text="+"
+            android:onClick="addFile"/>
 
-    <EditText
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Add Photo"
-        android:id="@+id/button"
-        android:background="#ff890217"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
-        android:textColor="#fffffff7" />
-</RelativeLayout>
+        <Gallery
+            android:layout_width="371dp"
+            android:layout_height="wrap_content"
+            android:id="@+id/gallery"
+            android:layout_gravity="center_horizontal"
+            android:layout_weight="0.97" />
+    </LinearLayout>
+
+    <GridLayout
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:layout_gravity="center_horizontal"
+        android:id="@+id/grid1">
+
+        <Button
+            android:layout_width="175dp"
+            android:layout_height="175dp"
+            android:background="@drawable/img1"
+            android:id="@+id/btn2"
+            android:layout_row="0"
+            android:layout_column="0" />
+
+        <Button
+            android:layout_width="175dp"
+            android:layout_height="175dp"
+            android:id="@+id/btn3"
+            android:background="@drawable/img1"
+            android:layout_row="0"
+            android:layout_column="4" />
+
+        <Button
+            android:layout_width="175dp"
+            android:layout_height="175dp"
+            android:id="@+id/btn4"
+            android:background="@drawable/img1"
+            android:layout_row="3"
+            android:layout_column="0" />
+
+        <Button
+            android:layout_width="175dp"
+            android:layout_height="175dp"
+            android:id="@+id/btn5"
+            android:background="@drawable/img1"
+            android:layout_row="3"
+            android:layout_column="4" />
+
+    </GridLayout>
+</LinearLayout>
