--- a/app/src/main/res/layout/activity_select_photo.xml
+++ b/app/src/main/res/layout/activity_select_photo.xml
@@ -8,13 +8,19 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_weight="1" />
+
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Push Picture"
+        android:id="@+id/button2"
+        android:layout_gravity="left" />
+
     <Button
         android:id="@+id/buttonLoadPicture"
-        android:layout_width="fill_parent"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_weight="0"
         android:onClick="loadImagefromGallery"
         android:text="Load Picture" />
 
-    </LinearLayout>
+</LinearLayout>
